crates/python_parser/tests/snapshots/invalid_syntax@import_stmt_star_import.py.snap
---
source: crates/python_parser/tests/fixtures.rs
input_file: crates/python_parser/resources/inline/err/import_stmt_star_import.py
---
## AST

```
Module(
    ModModule {
        range: 0..24,
        body: [
            Import(
                ImportStmt {
                    range: 0..6,
                    names: [],
                },
            ),
            Expr(
                ExprStmt {
                    range: 7..8,
                    value: Starred(
                        StarredExpr {
                            range: 7..8,
                            value: Name(
                                NameExpr {
                                    range: 8..8,
                                    id: Name(""),
                                    ctx: Invalid,
                                },
                            ),
                            ctx: Load,
                        },
                    ),
                },
            ),
            Import(
                ImportStmt {
                    range: 9..18,
                    names: [
                        Alias {
                            range: 16..17,
                            name: Identifier {
                                id: Name("x"),
                                range: 16..17,
                            },
                            asname: None,
                        },
                    ],
                },
            ),
            Expr(
                ExprStmt {
                    range: 19..23,
                    value: Tuple(
                        TupleExpr {
                            range: 19..23,
                            elts: [
                                Starred(
                                    StarredExpr {
                                        range: 19..20,
                                        value: Name(
                                            NameExpr {
                                                range: 20..20,
                                                id: Name(""),
                                                ctx: Invalid,
                                            },
                                        ),
                                        ctx: Load,
                                    },
                                ),
                                Name(
                                    NameExpr {
                                        range: 22..23,
                                        id: Name("y"),
                                        ctx: Load,
                                    },
                                ),
                            ],
                            ctx: Load,
                            parenthesized: false,
                        },
                    ),
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | import *
  |        ^ Syntax Error: Expected one or more symbol names after import
2 | import x, *, y
  |


  |
1 | import *
  |         ^ Syntax Error: Expected an expression
2 | import x, *, y
  |


  |
1 | import *
2 | import x, *, y
  |         ^ Syntax Error: Trailing comma not allowed
  |


  |
1 | import *
2 | import x, *, y
  |           ^ Syntax Error: Simple statements must be separated by newlines or semicolons
  |


  |
1 | import *
2 | import x, *, y
  |            ^ Syntax Error: Expected an expression
  |
